<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".controller.MainActivity">

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="500dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/studentId"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="500dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/student_detail_tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/student_detail_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/student_detail_tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/student_detail_tv_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="500dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/student_detail_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogTitle" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
