<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff" />

        <Button
            android:id="@+id/Query"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/query" />

        <Button
            android:id="@+id/Update"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/update" />

        <Button
            android:id="@+id/Delete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/QueryByTeacherId"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="老师查询" />

        <Button
            android:id="@+id/Insert"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="添加老师" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="学号:"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edt_id"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_weight="1" />

            <TextView
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="姓名:"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_weight="1" />

            <TextView
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:text="老师:"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edt_teacher"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/studentId"
                android:textSize="20dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textSize="20dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/teacherEntity"
                android:textSize="20dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_view_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>
</LinearLayout>